PCS BAckup 26Dec2023/Backup-Source/objects/User_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Analysis_Initial_Comments__c</fullName>
        <label>Analysis / Initial Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bid_Type_Screen_Page__c</fullName>
        <label>Bid Type / Screen / Page</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Clarification__c</fullName>
        <label>Client Clarification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments_by_Dev_Team__c</fullName>
        <label>Comments by Dev Team</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_by_Client__c</fullName>
        <label>Confirmed by Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_by_Testing_Team__c</fullName>
        <label>Confirmed by Testing Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Completed__c</fullName>
        <label>Development Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_of_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate of Feedback</label>
        <referenceTo>User_Feedback__c</referenceTo>
        <relationshipLabel>User Feedback</relationshipLabel>
        <relationshipName>User_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Observation_Suggestions_R__c</fullName>
        <label>Feedback / Observation / Suggestions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feedback_Source_Detail__c</fullName>
        <label>Feedback Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UAT1</fullName>
                </value>
                <value>
                    <fullName>UAT2</fullName>
                </value>
                <value>
                    <fullName>UAT3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <label>Feedback Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Teams</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Summary__c</fullName>
        <label>Feedback Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moved_to_Partial_Copy__c</fullName>
        <label>Moved to Partial Copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Bid_Numbers__c</fullName>
        <label>Reference Bid Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>More Details required</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tested_in_Dev_UAT__c</fullName>
        <label>Tested in Dev / UAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tested_in_Partial_Copy__c</fullName>
        <label>Tested in Partial Copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Feedback_Summary__c</columns>
        <columns>Feedback_Observation_Suggestions_R__c</columns>
        <columns>Bid_Type_Screen_Page__c</columns>
        <columns>Feedback_Source__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Reported_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UF-{000000}</displayFormat>
        <label>Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Making_Feedback_Source_Detail_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPickval( Feedback_Source__c ,&apos;UAT&apos;),Ispickval( Feedback_Source_Detail__c ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Feedback_Source_Detail__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Making_UF_Lookup_Req_if_status_is_open</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT( Status__c ) = &apos;Duplicate&apos;,
ISBLANK( Duplicate_of_Feedback__c )
)</errorConditionFormula>
        <errorDisplayField>Duplicate_of_Feedback__c</errorDisplayField>
        <errorMessage>You must select a feedback</errorMessage>
    </validationRules>
</CustomObject>